--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -4,7 +4,7 @@
     "appearance": "Изглед",
     "exportToCsv": "Извоз у CSV",
     "done": "ГОТОВО",
-    "chatWithAI": "Чет са вештачком интелигенцијом",
+    "chatWithAI": "Чет са AI",
     "photosPerDay": "Фотографије дневно",
     "extraActions": "Додатне акције",
     "mindOptions": "Опције белешке",
@@ -50,8 +50,6 @@
     "error": "Грешка",
     "startDiscussion": "Почни дискусију",
     "send": "ПОШАЉИ",
-    "done": "ГОТОВО",
-    "chatWithAI": "Чет са AI",
     "translateContent": "Преведи садржај",
     "sensitiveContent": "Осетљиви садржај",
     "updateYourNickname": "Ажурирај свој надимак",
@@ -72,7 +70,6 @@
     "spectrum": "Спектар",
     "youDidNotCollectAnyEntriesYet": "Још нисте прикупили ниједан унос",
     "pleaseAuthenticateToShowContent": "Молимо аутентификујте се да прикажете садржај ваше белешке",
-    "edit": "Уреди",
     "areYouSure": "Да ли сте сигурни?",
     "cannotRemoveMainScreen": "Не можете уклонити главни екран. Изгубићете могућност подешавања картица.",
     "today": "Данас",
@@ -81,11 +78,6 @@
     "lastTwoWeeks": "За последња 2 месеца",
     "thisMonth": "Овог месеца",
     "thisYear": "Ове године",
-    "calendar": "Календар",
-    "insights": "Увиди",
-    "settings": "Подешавања",
-    "profile": "Профил",
-    "debugMenu": "Мени за отклањање грешака",
     "calendarDescription": "Главни екран са календаром уноса",
     "insightsDescription": "Статистика свих ваших уноса",
     "settingsDescription": "Екран са свим подешавањима (тамни режим, синхронизација и сл.)",
@@ -93,5 +85,6 @@
     "todayDescription": "Само данашње белешке",
     "debugMenuDescription": "Алати за програмере за пребацивање експерименталних функција",
     "noMindsForThisDay": "Нема белешки за овај дан",
-    "showMindsForPeriod": "Прикажи белешке за {period}"
+    "showMindsForPeriod": "Прикажи белешке за {period}",
+    "week": "Недеља"
 }
